add font-family to the button

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 .btn {
     background-color: #fecf3e;
     color: #fff;
+    font-family: inherit;
     font-size: 1rem;
     padding: 0.8rem;
     border: none;
